frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');

@import "tailwindcss";

* {
    font-family: sans-serif;
    /* overflow-x: hidden; */
}

html {
  scroll-behavior: smooth;
}

html, body {
  overflow-x: hidden;
}

@theme {
    --color-dark-100: #1a1a1a;
    --color-dark-200: #1f1f1f;
    --color-dark-300: #2d2d2d;
    --color-dark-400: #3d3d3d;
    --color-purple: #8B5CF6;
    --color-pink: #ec4899;
    --color-blue: #3B82F6;
}

.typewriter {
    overflow: hidden;
    border-right: 0.15em solid #8b5cf6;
    white-space: nowrap;
    width: 0;
    animation: typing 3s steps(20, end) forwards, blink-caret 0.75s step-end 4;

}

@keyframes typing {
    from {
        width: 0;
    }

    to {
        width: 19ch;
    }

}

@keyframes blink-caret {

    from,
    to {
        border-color: transparent;
    }

    50% {
        border-color: #8b5cf6;
    }
}

